<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_management"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:background="@color/gray"
        android:padding="7dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/id"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_id"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/text_gender"
        android:text="@string/gender"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_name"
        app:layout_constraintStart_toStartOf="@id/inputLayout_name"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="@id/text_gender"
        app:layout_constraintBottom_toBottomOf="@id/text_gender"
        app:layout_constraintStart_toEndOf="@id/text_gender"
        app:layout_constraintEnd_toEndOf="@id/inputLayout_name">

        <RadioButton
            android:id="@+id/gender_male"
            android:text="@string/male"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/gender_female"
            android:text="@string/female"
            android:layout_marginStart="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RadioGroup>

    <Button
        android:id="@+id/button_add"
        android:text="@string/insert_employee"
        android:layout_marginTop="20dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/inputLayout_name"
        app:layout_constraintEnd_toEndOf="@id/inputLayout_name"
        app:layout_constraintTop_toBottomOf="@id/text_gender"/>


    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/list_employee"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@color/gray"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:padding="7dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_add"/>

    <ImageView
        android:id="@+id/button_remove"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/ic_delete"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/result"
        app:layout_constraintBottom_toBottomOf="@id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/result"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/result"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>